# ifc-mcp

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
cowork-plugin/: .mcp.json  pack
cowork-plugin/.claude-plugin/: plugin.json
cowork-plugin/commands/: IFC-SUMMARY.md  LOAD-IFC.md
cowork-plugin/skills/ifc-explorer/: SKILL.md
cowork-plugin/skills/ifc-explorer/references/: TOOLS-REFERENCE.md
data/: AdvancedProject.ifc  BasicHouse.ifc
docs/: DIFFING.md  LINTING.md
scripts/: benchmark_parse.py
src/ifc_mcp/: __init__.py  cli.py  server.py
src/ifc_mcp/core/: __init__.py  cli.py  geometry.py  index.py  matcher.py  parser.py  pipeline.py  placement.py  progress.py  scene.py  types.py
src/ifc_mcp/diff/: __init__.py  cli.py  engine.py
src/ifc_mcp/lint/: __init__.py  cli.py  config.py  engine.py  rules.py
src/ifc_mcp/mcp/: __init__.py  cli.py  model_store.py  server.py
src/ifc_mcp/mcp/tools/: __init__.py  analysis.py  meta.py  quantities.py  query.py  relationships.py  spatial.py
src/ifc_mcp/tools/: __init__.py  analysis.py  meta.py  quantities.py  query.py  relationships.py  spatial.py
tests/: conftest.py  test_cli_flags.py  test_geometry_perf.py  test_index.py  test_lint.py  test_mcp_model_store.py  test_parser.py  test_scene.py
tests/test_tools/: test_analysis.py  test_meta.py  test_quantities.py  test_query.py  test_relationships.py  test_spatial.py
