[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifc-mcp"
version = "0.1.4"
description = "MCP server for querying IFC building model files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Imants" }
]
keywords = ["ifc", "bim", "mcp", "llm", "aec", "construction", "building"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "ifcopenshell",
    "fastmcp>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
ifc-mcp = "ifc_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/imants/ifc-mcp"
Repository = "https://github.com/imants/ifc-mcp"
Issues = "https://github.com/imants/ifc-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ifc_mcp"]
